<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.wujie.wanandroid.fragment.todo.AddTodoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/dimen_8"
            app:contentPadding="@dimen/dimen_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/todo_title"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />


                   <!-- <ImageView
                        android:id="@+id/iv_priority"
                        android:layout_width="@dimen/dimen_24"
                        android:layout_height="@dimen/dimen_24"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/margin"
                        android:onClick="@{()->viewModel.changeToDoPriority()}"
                        android:src="@mipmap/ic_star_outline"
                        app:todoGrade="@{viewModel.priority}" />-->

                </LinearLayout>

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginRight="@dimen/margin"
                    android:background="@drawable/edit_text_bg"
                    android:padding="@dimen/dimen_8"
                    android:text="@={viewModel.mTitle}"
                    android:textSize="@dimen/text_15"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />


                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top"
                    android:minLines="5"
                    android:padding="@dimen/dimen_8"
                    android:text="@={viewModel.mContent}"
                    android:textSize="@dimen/text_15"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_title" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_32"
                    android:text="@string/todo_type"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_content" />


                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_type">

                    <RadioButton
                        android:id="@+id/rb_study"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/todo_study"
                        android:textColor="@drawable/radiobutton_textcolor"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_work"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/todo_work"
                        android:textColor="@drawable/radiobutton_textcolor"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_live"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/todo_life"
                        android:textColor="@drawable/radiobutton_textcolor"
                        android:textSize="14sp" />


                    <RadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/todo_other"
                        android:textColor="@drawable/radiobutton_textcolor"
                        android:textSize="14sp" />

                </RadioGroup>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32"
                    android:layout_marginBottom="@dimen/dimen_24">

                    <TextView
                        android:id="@+id/tv_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_16"
                        android:text="@string/done_time"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_content" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:onClick="@{()->viewModel.changeDoneDate()}"
                        android:text="@{viewModel.date}"
                        android:textSize="@dimen/text_16"
                        tools:text="2020-02-01" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="@{()->viewModel.addData()}"
            android:text="@{viewModel.date}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>